<resources>
    <string name="app_name">HR Management</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_employee">Add employee</string>
    <string name="action_save">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_new_department">New Department</string>
    <string name="action_search">Search</string>

    <string name="label_departments">All Departments</string>
    <string name="label_employees">Employees</string>
    <string name="label_id">#</string>
    <string name="label_employee">Employee</string>
    <string name="label_position">Position</string>
    <string name="label_status">Status</string>
    <string name="label_phone">Phone</string>
    <string name="label_date_of_birth">Date of birth (MM-DD-YYYY)</string>
    <string name="label_place_of_birth">Place of birth</string>
    <string name="label_department">Department</string>
    <string name="label_address">Address</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_new_employee">New Employee</string>

    <string name="hint_name">Full name</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>

    <string name="message_add_success">Employee Added successfully.</string>
    <string name="message_update_success">Employee updated successfully.</string>
    <string name="message_delete_success">Employee Deleted successfully.</string>
    <string name="message_delete_fail">Can not Delete this Employee</string>
    <string name="message_confirm_delete">Are you sure you want to delete this employee?</string>
    <string name="message_create_success">Department created successfully.</string>
    <string name="message_create_fail">Department cannot created.</string>
    <string name="message_name_empty">Name is empty, Employee is not added.</string>

    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>

    <string name="title_confirm_delete">Confirm Delete</string>
    <string name="title_new_department">New Department</string>
</resources>
