<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_employee"
                android:layout_width="@dimen/avatar_size_medium"
                android:layout_height="@dimen/avatar_size_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:src="@drawable/ic_avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName|textCapWords" />

                <View style="@style/Divider" />

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />

                <View style="@style/Divider" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_department" />

            <Spinner
                android:id="@+id/spinner_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_position" />

            <Spinner
                android:id="@+id/spinner_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_status" />

            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date_of_birth" />

            <TextView
                android:id="@+id/text_date_of_birth"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_place_of_birth" />

            <EditText
                android:id="@+id/edit_place_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address" />

            <View style="@style/Divider" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>